--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/staynomad/nomad-slack#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^9.0.2",
     "slackbots": "^1.2.0"
   }
 }
